# discord-gm

./: README.md  function_dispatcher.py  main.py  memory_manager.py  profile_manager.py  project_structure.txt  pyproject.toml
data/adventures/templates/: temple_of_fate.json
data/users/135882546440306688/: profile.json  state.json
data/users/135882546440306688/memory/: short_term.json
profiles/: 135882546440306688_profile.json
src/bot/: __init__.py  commands.py  discord_client.py  events.py
src/llm/: __init__.py  client.py  prompts.py
src/managers/: __init__.py  adventure_manager.py  memory_manager.py  profile_manager.py  state_manager.py
src/models/: __init__.py  memory.py  profile.py  state.py
src/utils/: __init__.py  dynamic_storage.py  file_utils.py  function_dispatcher.py  message_delay.py  text_utils.py
